Created Interfaces, Models, and Stubs

--- a/HealthServices.Domain/HealthServices.Domain.csproj
+++ b/HealthServices.Domain/HealthServices.Domain.csproj
@@ -39,6 +39,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Interfaces\IRepository.cs" />
+    <Compile Include="Interfaces\IUnitOFWork.cs" />
     <Compile Include="Models\Person.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
