Adding Assembly Info for each Project

--- a/HealthServices.Domain/HealthServices.Domain.csproj
+++ b/HealthServices.Domain/HealthServices.Domain.csproj
@@ -41,7 +41,9 @@
   <ItemGroup>
     <Compile Include="Interfaces\IRepository.cs" />
     <Compile Include="Interfaces\IUnitOFWork.cs" />
+    <Compile Include="Models\Address.cs" />
     <Compile Include="Models\Person.cs" />
+    <Compile Include="Models\Provider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
