--- a/HealthServices.Constants/HealthServices.Constants.csproj
+++ b/HealthServices.Constants/HealthServices.Constants.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{5941379B-AA6C-4B4A-A41D-18AB7917076D}</ProjectGuid>
+    <ProjectGuid>{05299319-AA39-4122-AA76-1EF46AB92D75}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>HealthServices.Domain</RootNamespace>
-    <AssemblyName>HealthServices.Domain</AssemblyName>
+    <RootNamespace>HealthServices.Constants</RootNamespace>
+    <AssemblyName>HealthServices.Constants</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,11 +40,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Interfaces\IRepository.cs" />
-    <Compile Include="Interfaces\IUnitOFWork.cs" />
-    <Compile Include="Models\Address.cs" />
-    <Compile Include="Models\Person.cs" />
-    <Compile Include="Models\Provider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
