Making Changes to View
Adding Themes
Changing Layout

--- a/HealthServices.Web/HealthServices.Web.csproj
+++ b/HealthServices.Web/HealthServices.Web.csproj
@@ -172,6 +172,8 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\cerulean-bootstrap.css" />
+    <Content Include="Content\cerulean-bootstrap.min.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -248,11 +250,10 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>1342</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:1342/</IISUrl>
+          <IISUrl>http://localhost/healthservices</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
-          <CustomServerUrl>
-          </CustomServerUrl>
+          <CustomServerUrl>http://localhost/healthservices</CustomServerUrl>
           <SaveServerSettingsInUserFile>False</SaveServerSettingsInUserFile>
         </WebProjectProperties>
       </FlavorProperties>
